<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:onClick="inviteFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_friend"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="#f0f0f0">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:src="@drawable/dogs"
            android:contentDescription="@string/film_cover" />

        <TextView
            android:id="@+id/f001_text"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/dogs_name_film"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="20sp"
            android:textColor="#000"/>

        <Button
            android:id="@+id/f001"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/Details"
            android:onClick="showDetails" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="#f0f0f0">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:src="@drawable/buy_me"
            android:contentDescription="@string/film_cover"/>

        <TextView
            android:id="@+id/f002_text"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/buy_me_name_film"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="20sp"
            android:textColor="#000"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/Details"
            android:id="@+id/f002"
            android:onClick="showDetails" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="#f0f0f0">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:src="@drawable/last_jedi"
            android:contentDescription="@string/film_cover"/>

        <TextView
            android:id="@+id/f003_text"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/last_jedi_name_film"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="20sp"
            android:textColor="#000"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/Details"
            android:id="@+id/f003"
            android:onClick="showDetails" />

    </LinearLayout>

</LinearLayout>