<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_spacing"
        android:paddingVertical="@dimen/activity_vertical_spacing">

        <ImageView
            android:id="@+id/film_cover"
            android:layout_width="120dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/film_cover" />

        <TextView
            android:id="@+id/film_name"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintStart_toEndOf="@id/film_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/content_vertical_spacing"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="@style/BigMainText"
            android:text="@string/buy_me_name_film"/>

        <TextView
            android:id="@+id/film_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/film_cover"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/content_vertical_spacing"
            android:textAppearance="@style/MainTextHeading"
            android:text="@string/test_string"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
